--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <img src="images/logo.svg" alt="logo">
       </div>
       <div class="boxmenu">
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()" aria-label="Open menu">
           <i class="fa fa-bars" id="bars"></i>
         </a>
-        <a href="javascript:void(0);" class="icon" onclick="FunctionClose()">
+        <a href="javascript:void(0);" class="icon" onclick="FunctionClose()" aria-label="Close menu">
           <i class="fa fa-window-close" id="closebutton" aria-hidden="true"></i>
         </a>
       </div>
@@ -58,7 +58,7 @@
         <p> Get your life insurance coverage easier and faster. We blend our expertise
           and technology to help you find the plan that’s right for you. Ensure you
           and your loved ones are protected.</p>
-        <div><a href="">View plans</a></div>
+        <div><a href="#">View plans</a></div>
       </div>
       <div>        
         <img src="images/image-intro-desktop.jpg  " alt="intro">
@@ -91,7 +91,7 @@
       </div>
     <div class="work">
       <h1>Find out more <br>about how we work</h1>
-      <div><a href="">How we work</a></div>
+      <div><a href="#">How we work</a></div>
     </div>
   </main>
   <footer>
